# src/main/java/fi/veikkaus/demo/model/Event.java
@@ -1,29 +1,27 @@
 package fi.veikkaus.demo.model;
-// Generated Mar 20, 2025, 2:02:34 PM by Hibernate Tools 6.6.10.Final
 
-
-import java.io.Serializable;
 import java.math.BigDecimal;
-import java.sql.Timestamp;
-import java.util.HashSet;
-import java.util.Set;
+import java.time.LocalDateTime;
+import java.util.UUID;
 import lombok.AllArgsConstructor;
+import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
+import org.springframework.data.annotation.Id;
+import org.springframework.data.relational.core.mapping.Table;
 
-/**
- * Event generated by hbm2java
- */
 @Data
+@Builder
+@Table("event")
 @NoArgsConstructor
 @AllArgsConstructor
-public class Event  implements java.io.Serializable {
-
-     private Serializable id;
-     private Timestamp timestamp;
-     private String eventType;
-     private BigDecimal amount;
-     private Player playerEvents;
+public class Event {
+  @Id
+  private UUID id;
+  private UUID playerId;
+  private String eventType;
+  private BigDecimal amount;
+  private LocalDateTime timestamp;
 }
 
 
