# src/main/java/fi/veikkaus/demo/service/mapper/DtoModelMapper.java
@@ -1,0 +1,16 @@
+package fi.veikkaus.demo.service.mapper;
+
+import fi.veikkaus.demo.dto.PlayerDto;
+import fi.veikkaus.demo.model.Player;
+import org.mapstruct.Mapper;
+import org.mapstruct.Mapping;
+
+@Mapper(componentModel = "spring")
+public interface DtoModelMapper {
+  
+  @Mapping(source = "id",
+           target = "playerId")
+  @Mapping(source = "balance",
+           target = "amount")
+  PlayerDto toDto(Player player);
+}
